--- a/JavaScript/JS-30.html
+++ b/JavaScript/JS-30.html
@@ -1,6 +1,6 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P05">JS:P05 > jQuery</h1>
+<h1 id="P05">JS:P05 > library and framework</h1>
 <a href="JS-31.html">Next</a><a href="JS-29.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
@@ -11,6 +11,38 @@ jQuery
 --------------------------------------------------------------------------------
 
 </pre>
+
+<pre>
+--------------------------------------------------------------------------------
+AngularJS
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+React
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+nodeJS
+--------------------------------------------------------------------------------
+
+</pre>
+
+<pre>
+--------------------------------------------------------------------------------
+other frameworks
+--------------------------------------------------------------------------------
+
+</pre>
+
+
+
+
 
 
 
