--- a/JavaScript/JS-35.html
+++ b/JavaScript/JS-35.html
@@ -1,7 +1,7 @@
 <link href="style.css" rel="stylesheet" type="text/css" />
 <div>
-<h1 id="P06">JS:P06 > reference : part-two</h1>
-<a href="JS-33.html">Next</a><a href="JS-31.html">Previous</a><a href="JS-01.html">Home</a>
+<h1 id="P06">JS:P06 > reference : part-five</h1>
+<a href="#">Next</a><a href="JS-34.html">Previous</a><a href="JS-01.html">Home</a>
 </div>
 <!-- ----------------------------------------------------------------------- -->
 
